@@ -3,16 +3,16 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.github.imrafaelmerino</groupId>
     <artifactId>json-values-benchmark</artifactId>
-    <version>12.0.0</version>
+    <version>11.9.1</version>
     <packaging>jar</packaging>
     <name>json-values-benchmark-${version}</name>
     <properties>
-        <JSON-VALUES.VERSION>12.3.2</JSON-VALUES.VERSION>
+        <JSON-VALUES.VERSION>11.9.1</JSON-VALUES.VERSION>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <JMH-VERSION>1.35</JMH-VERSION>
         <JAVAX-ANNOTATION-VERSION>1.3.2</JAVAX-ANNOTATION-VERSION>
-        <COMPILER_SOURCE_VERSION>17</COMPILER_SOURCE_VERSION>
-        <COMPILER_TARGET_VERSION>17</COMPILER_TARGET_VERSION>
+        <COMPILER_SOURCE_VERSION>8</COMPILER_SOURCE_VERSION>
+        <COMPILER_TARGET_VERSION>8</COMPILER_TARGET_VERSION>
         <PLUGIN_COMPILER_VERSION>3.8.0</PLUGIN_COMPILER_VERSION>
         <JACKSON-VERSION>2.13.4.1</JACKSON-VERSION>
         <JSON-SCHEMA-VALIDATOR.VERSION>2.2.14</JSON-SCHEMA-VALIDATOR.VERSION>
@@ -108,7 +108,6 @@
                     <showWarnings>true</showWarnings>
                     <compilerArgs>
                         <arg>-Xlint:all</arg>
-                        <arg>--enable-preview</arg>
                     </compilerArgs>
                 </configuration>
             </plugin>
